[package]
name = "hello_cargo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
imagine = "0.0.5"
nalgebra = "0.30.1"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[dev-dependencies]