[package]
name = "hello_cargo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
image = "0.24.2"
freetype-sys = "0.15.0"
encode_unicode = "0.3.6"
num-traits = "0.2.14"
serde = "1.0.137"
bincode = "1.3.3"
strum = "0.24.0"
strum_macros = "0.24.0"
num_enum = "0.5.7"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[dev-dependencies]
