[package]
name = "rustgl"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "target-feature=+crt-static"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", optional = true, features = ["debug_error_checks"]}
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
image = { version = "0.24.2", optional = true }
freetype-sys = { version = "0.15.0", optional = true }
encode_unicode = "0.3.6"
num-traits = "0.2.14"
serde = "1.0.137"
bincode = "1.3.3"
strum = "0.24.0"
strum_macros = "0.24.0"
num_enum = "0.5.7"
ordered-float = "3.0.0"
itertools = "0.10.3"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false
optional = true

[dev-dependencies]

[features]
client = ["glfw", "ogl33", "image", "freetype-sys"]
server = ["image"]
errpanic = []

[[client]]
name = "client"
required-features = ["client"]

[[server]]
name = "server"
required-features = ["server"]
